--- a/src/css/output.css
+++ b/src/css/output.css
@@ -765,16 +765,16 @@ video {
   gap: 1.5rem;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
 }
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
 }
 
 .gap-7 {
@@ -826,14 +826,18 @@ video {
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+.border-transparent {
+  border-color: transparent;
 }
 
 .border-secondary-color {
   --tw-border-opacity: 1;
   border-color: rgb(23 43 77 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-\[\#222222\] {
@@ -915,6 +919,11 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
 }
 
 .py-2 {
@@ -1289,7 +1298,76 @@ video {
   bottom: 0px;
   width: 100%;
   transition: all;
-  transition-duration: 0.2s;
+  transition-duration: 0.4s;
+}
+
+/* .btn {
+    text-decoration: none;
+    position: relative;
+    transition: all .30s;
+}
+
+.btn_in{
+    position: relative;
+    z-index: 2;
+}
+
+.btn:after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: white;
+    transition: all .35s;
+    border-radius: 8px;
+}
+
+.btn:hover {
+    color: #172B4D;
+    /* font-weight: 500; 
+
+}
+
+.btn:hover:after {
+    width: 100%;
+} */
+
+/* ✅ Button Animation ------------------------------------------------------------------------------------------------------------------------- */
+
+.animate_button_main {
+  border-color: white;
+  background-image: linear-gradient(45deg, white 50%, transparent 50%);
+  background-position  : 100%;
+  background-size: 400%;
+  transition: background 300ms linear;
+}
+
+.animate_button_main:hover{
+  background-position: 0;
+  color: #172B4D;
+}
+
+.animate_bottom_border {
+  cursor: pointer;
+  position: relative;
+}
+
+.animate_bottom_border:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  background: white;
+  left: 45%;
+  height: 4px;
+  bottom: 0;
+  transition: all .5s;
+}
+
+.animate_bottom_border:hover:before {
+  width: 100%;
+  left: 0;
 }
 
 .placeholder\:text-sm::-webkit-input-placeholder {
@@ -1340,6 +1418,15 @@ video {
   cursor: not-allowed;
 }
 
+.hover\:border:hover {
+  border-width: 1px;
+}
+
+.hover\:border-secondary-color:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(23 43 77 / var(--tw-border-opacity));
+}
+
 .hover\:opacity-90:hover {
   opacity: 0.9;
 }
@@ -1376,8 +1463,8 @@ video {
     margin-top: 0.25rem;
   }
 
-  .md\:mt-5 {
-    margin-top: 1.25rem;
+  .md\:mt-8 {
+    margin-top: 2rem;
   }
 
   .md\:mt-2 {
@@ -1412,8 +1499,8 @@ video {
     width: 50%;
   }
 
-  .md\:w-\[94\%\] {
-    width: 94%;
+  .md\:w-\[85\%\] {
+    width: 85%;
   }
 
   .md\:w-\[40\%\] {
@@ -1470,9 +1557,9 @@ video {
     padding-right: 2.5rem;
   }
 
-  .md\:py-1 {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .md\:px-12 {
